apps/prowlarr/prowlarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: prowlarr.erix-homelab.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr-service
            port:
              number: 9696
  tls:
  - secretName: erix-homelab-site-tls
    hosts:
      - prowlarr.erix-homelab.site
